--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -86,3 +86,34 @@ article i {
 .visible{
   visibility: visible;
 }
+
+.flex-container{
+  display:flex;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+    align-items: flex-start;
+    
+
+  }  
+  nav {
+    display:none;
+
+  }
+  
+}
+
+@media only screen and (min-width: 768px) {
+  header{
+    margin:100px;
+  }
+
+  header{
+    margin-top: 200px;
+  }
+
+}
+
